--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test_react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://elenagir.github.io/test_react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
